--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "ember-data": "^2.10.0",
     "ember-export-application-global": "^1.0.5",
     "ember-gestures": "^0.4.8",
+    "ember-inputmask": "0.4.0-beta.5",
     "ember-load-initializers": "^0.5.1",
     "ember-resolver": "^2.0.3",
     "ember-truth-helpers": "2.0.0",
