--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,7 @@
     "ember": "~2.10.0",
     "ember-cli-shims": "0.1.3",
     "font-awesome": "font-awsome#^4.7.0",
-    "sweetalert.min": "https://unpkg.com/sweetalert/dist/sweetalert.min.js"
+    "sweetalert.min": "https://unpkg.com/sweetalert/dist/sweetalert.min.js",
+    "lodash": "^4.17.4"
   }
 }
