--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,6 @@
     "ember-cli-shims": "0.1.3",
     "font-awesome": "font-awsome#^4.7.0",
     "sweetalert.min": "https://unpkg.com/sweetalert/dist/sweetalert.min.js",
-    "lodash": "^4.17.4"
+    "moment": "^2.19.2"
   }
 }
