--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,7 @@
     "ember-cli-shims": "0.1.3",
     "font-awesome": "font-awsome#^4.7.0",
     "sweetalert.min": "https://unpkg.com/sweetalert/dist/sweetalert.min.js",
-    "moment": "^2.19.2"
+    "moment": "^2.19.2",
+    "fullcalendar": "^3.7.0"
   }
 }
